fix mobile heading not center if overflow

--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -33,6 +33,12 @@
     }
 }
 
+.flex.mobile-column.align-center {
+    @include mobile {
+        text-align: center;
+    }
+}
+
 
 .flexitem.fill {
     flex: 1;
