--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -32,10 +32,3 @@ header {
         }
     }
 }
-
-
-@include mobile {
-    header {
-        text-align: center;
-    }
-}
